--- a/style.css
+++ b/style.css
@@ -1,97 +1,370 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.hero {
+  min-height: 100vh;
+  background-image: url(./public/assets/iteration-1/home-banner.png);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  color: white;
+  gap: 20px;
+}
+.header-content h1 {
+  font-family: 'Barlow',cursive;
+  font-size: 4rem;
+  font-weight: 100;
+  margin: 0;
+}
+.overlay {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:15px;
+}
+.overlay h2 {
+  font-family: 'Satisfy',sans-serif;
+  color: #FDC913;
+  font-size: 2rem;
+  margin: 0;
+}
+.overlay h1 {
+  font-family: 'Barlow', sans-serif;
+  font-size: 4.5rem;
+  font-weight: 200;
+  margin: 0;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.overlay button {
+  font-size: 1.2rem;
+  padding: 15px 30px;
+  border-radius: 50px;
+  background-color: #FDC913;
+  color: black;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.categories {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  background-color: white;
+  padding: 20px;
+  width: 100%;
+  flex-wrap: nowrap;
+}
+.category {
+  display: flex;
+  align-items: center;
+  flex: 0 0 auto;
+  gap: 10px;
+}
+.category img {
+  width: 40px;
+  height: 40px;
+  display: block;
+  margin: 0 auto 10px;
+}
+.cat-text {
+  margin-top: 8px;
+  font-size: 0.9rem;
+  text-align: center;
+  color: #333;
+}
+/*Orta Kısım*/
+.promo-section {
+  padding: 60px;
+  background: #FAF7F2;
+  max-width: 90%;
+}
+.promo-grid {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+/* promo-card resimler  */
+.promo-card.pizza {
+  background-image: url("./public/assets/iteration-2/cta/kart-1.png");
+  color: white;
+  width: 25%;
+} 
+.promo-card.burger{
+  background-image: url("./public/assets/iteration-2/cta/kart-2.png");
+  width: 160%;
+}
+.promo-card.kurye {
+  background-image: url("./public/assets/iteration-2/cta/kart-3.png");
+  width: 150%;
+}
+.right-column {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  height: 100%;
+}
+/*Promo card üstündeki yazılar */
+.promo-card {
+  display: grid;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+  padding: 20px 30px;
+  text-align: left;
+
+  background-size: cover;
+  background-position:center;
+}
+.promo-card.pizza h2{
+  margin: 0 0 12px;
+  font-size: 60px;
+}
+.promo-card.burger p {
+  font-size: 30px;
+  color: white;
+}
+.promo-card.burger h3 {
+  font-size: 30px;
+  color: black;
+}
+.promo-card.kurye h3  {
+  font-size: 1.5rem;
+  margin: 0 0 10px;
+}
+.promo-card.kurye h3 .red {
+  color: red;
+  font-weight: bold;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* ortadaki resimler */
+
+.promo-card button {
+  margin-top: 10px;
+  background: white;
+  color: #e63946;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: bold;
+}
+/*ortanın altı */
+.menu-section {
+  background-color: #FAF7F2;
+  padding: 60px 0;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.menu-section .container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.menu-subtitle {
+  font-family: 'Satisfy', cursive;
+  font-size: 1.4rem;
+  color: #c62828;
+  margin-bottom: 8px;
 }
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.menu-title {
+  font-size:2rem;
+  font-weight: 700;
+  margin-bottom: 32px;
 }
-
-.card {
-  padding: 2em;
+.menu-categories {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 }
-
-.read-the-docs {
-  color: #888;
+.menu-categories button {
+  background: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  font-size:0.95rem;
+  cursor:pointer;
+  transition: all 0.3s ease;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.menu-categories img {
+  width: 25px;
 }
-button:hover {
-  border-color: #646cff;
+.menu-categories button.active {
+  background: #222;
+  color: #fff;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.menu-grid {
+  display: flex;
+  justify-content: center; /*kartları ortala*/
+  gap: 20px;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.menu-card {
+  background: #fff;
+  flex: 500px 500px 80px;
+  padding: 20px;
+  text-align: center;
+  border-radius: 12px;
+}
+.menu-card img {
+  width: 200px;
+  height: auto;
+  margin-bottom: 12px;
+}
+.price {
+  font-weight: bold;
+  margin-top: 8px;
+}
+/*FOOTER*/
+footer {
+  background-color:#0f0f10; 
+  color:#eee; 
+  padding:24px 0;
+  justify-content: center;
+  align-items: center;
+    }
+/*footer sütunları ayarlama */
+.footer-inner {
+  display:flex;
+  justify-content: space-between;
+  gap:48px;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+}
+.brand {
+  font-family:'Barlow', sans-serif ;
+  font-size: clamp(28px,3vw,36px);
+  line-height: 1.05;
+  color: #fff;
+  margin: 36px 40px -16px;
+}
+.social { 
+  padding: 50px; 
+  margin:0 0 0; 
+  display:grid; 
+  gap:8px; }
+.social li  {
+  display: flex;
+  align-items: center; /*dikeyde ortala */
+  gap: 10px; /*ikon ile yazı arası boşluk*/
+  margin-bottom:12px; /*satırlar arası boşluk */
   }
-  a:hover {
-    color: #747bff;
+.social p {
+  margin: 0;
+}
+.footer-menu h4, .footer-ig h4 { color:#fff; margin:60px -400px -45px;font-size: clamp(28px,3vw,36px); }
+.footer-menu ul { list-style:none; padding:0; margin: 100px -400px 12px; display:grid; gap:8px; color: white }
+
+.ig-grid { display:grid; margin: 100px -500px 0px; grid-template-columns: repeat(3, 150px); gap: 10px;  }
+.ig-grid img { width:104.5px; height: 94.5px; aspect-ratio:1/1; object-fit:cover; border-radius:12px;  }
+
+.footer-bottom {
+  border-top:1px solid rgba(255,255,255,.08);
+  margin-top:32px; padding-top:16px;
+  display:flex; justify-content:space-between; align-items:center;
+  color:#9aa0a6;
+}
+.footer-bottom .social { font-size:18px; }
+
+@media (max-width:768px) {
+  .hero{
+    min-height: auto;
+    padding: 40px 20px;
+    text-align: center;
   }
-  button {
-    background-color: #f9f9f9;
+  .overlay h1 {
+    font-size: 2rem;
+  }
+  .overlay h2 {
+    font-size: 1.2rem;
+  }
+  .categories {
+    flex-wrap: wrap;
+    gap:20px;
+  }
+  .category {
+    flex: 1 1 40%;
+    justify-content: center;
+  }
+ /*Promo section */
+ .promo-grid {
+  flex-direction: column;
+  align-items: center;
+ } /*duzenlenecek */ 
+ .pizza,.burger,.kurye{
+  width: 100%;
+  max-width: 250px;
+  height: 40px;
+  background-size: cover;
+ }
+ .menu-grid {
+  flex-direction: column;
+  align-items: center;
+ }
+ .menu-card {
+  max-width: 350px;
+  width: 100%;
+ }
+  .menu-card img{
+    width: 150px;
+  }
+  /*Footer*/
+  footer {
+    text-align: center;
+    padding: 40px 20px;
+  }
+  .footer-inner {
+    flex-direction: column;
+    text-align: center;
+    gap: 32px;
+  }
+  .footer-brand {
+  margin: 0;
+  }
+  .footer-brand .social {
+    padding: 0;
+    margin: 20px 0;
+    list-style: none;
+  }
+  .footer-brand .social li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+  }
+  .footer-menu h4{
+    margin: 0;
+  }
+  .footer-menu ul {
+    margin: 16px 0 0;
+    padding: 0;
+    list-style: none;
+  }
+  .footer-ig {
+    margin: 0;
+  }
+  .ig-grid {
+    grid-template-columns: repeat(2,1fr);
+    gap: 8px;
+    margin: 0 auto;
+  }
+  .ig-grid img {
+    width: 100%;
+    height: auto;
+  }
+  .footer-bottom {
+    flex-direction: column;
+    gap: 12px;
+    text-align: center;
   }
 }
+
