--- a/style.css
+++ b/style.css
@@ -41,7 +41,10 @@ body {
   font-weight: 200;
   margin: 0;
 }
+.ustmenu nav p {
+    
 
+}
 .ustmenu button {
   font-size: 1.2rem;
   padding: 15px 30px;
